Fix SonarQube issues and DST-sensitive test failure (#961)
* Fix SonarQube issues and DST-sensitive test failure

* Additional coverage testing

* More sonarqube coverage tests and issue resolution

* fix environment-dependent test